Left panel no longer too wide on desktop
Fixes #193

--- a/src/static/sass/_layout.scss
+++ b/src/static/sass/_layout.scss
@@ -99,7 +99,7 @@ header {
   header {
     flex: 1;
     display: inline-flex;
-    max-width: 306px;
+    max-width: 28vw;
     flex-direction: column;
     justify-content: start;
     height: 100vh;
